@@ -328,6 +328,10 @@ Games.radioButton.off=off
 Games.radioButton.on=on
 Games.title.gameOver=Game Over
 Games.title.gameSettings=Game Settings
+Games.check=Check
+Games.tryAgain=Try Again
+Games.showAnswer=Show Answer
+Games.next=Next
 
 message.valueOutOfRange=Value must be between {0} and {1}.
 
